--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,7 +23,7 @@ html {
 body {
   background: $background-light !important;
   margin: 0;
-  color: #333;
+  color: $color-text-primary;
   margin: 0;
   min-height: 100vh;
   position: relative;
@@ -76,7 +76,7 @@ body {
     h2 {
       text-transform: uppercase;
       margin-bottom: 40px;
-      color: #333;
+      color: $text-white;
       // Typography handled by _typography.scss
     }
   }
@@ -278,5 +278,34 @@ figure {
     font-size: 1rem;
     padding: 10px 12px;
     min-width: 120px;
+  }
+}
+
+// Dark Mode Styles
+.dark-mode {
+  body {
+    background: $dark-bg !important;
+    color: $text-white;
+  }
+
+  .home-section-header h2,
+  .section-header h2,
+  .about-header h2,
+  .featured-work-header h2,
+  .blog-header h2,
+  .contact-header h2 {
+    color: $text-white !important;
+  }
+
+  .section-intro,
+  .about-intro,
+  .featured-work-intro,
+  .blog-intro,
+  .contact-intro {
+    color: $gray-400 !important;
+  }
+
+  .container h2 {
+    color: $text-white !important;
   }
 }
