--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @use 'components/cards';
 @use 'components/badges';
 @use 'components/loader';
+@use 'components/page-header';
 
 // ============================================================
 // BASE STYLES
